# Style-Bert-VITS2

./: README.md  library.ipynb  pyproject.toml
docs/: CLI.md
